# EdgeMind

./: .dockerignore  .env.template  .eslintignore  .eslintrc.json  .gitignore  .mcp.json  CLAUDE.md  DEPLOY-H1.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  README.md  SPARKPLUG_SUMMARY.md  app.js  deploy-ec2.sh  docker-compose.yml  factory-command-center.html  index.html  openapi-generated_v3.json  package-lock.json  package.json  prototype-navbar.html  push-wiki.sh  server.js  start-local.sh  styles.css  toggle-insights.sh
.quint/: context.md  quint.db
Deployment Scripts/: Dockerfile  README.md  deploy-agents.sh  docker-compose.local.yml  docker-compose.yml  local-deploy.sh
ProcessFlowApp/: ERROR_FIX.md  FINAL_FIX_SUMMARY.md  NO_DATA_FIX.md  PERFORMANCE_FIX.md  README.md  RESTART_INSTRUCTIONS.md  index.html  mqtt-proxy-server.js  package-lock.json  package.json
agent/anomaly/: pyproject.toml
agent/anomaly/src/: main.py  prompt.yaml
agent/chat/: Dockerfile  pyproject.toml
agent/chat/src/: main.py  prompt.yaml
agent/chat/src/kb_tools/: __init__.py
agent/chat/src/tools/: __init__.py
agent/edgemindassistant/: .bedrock_agentcore.yaml  Dockerfile  pyproject.toml
agent/edgemindassistant/scripts/: ingest_kb.py
agent/edgemindassistant/src/: main.py  prompt.yaml
agent/edgemindassistant/src/model/: load.py
css/: ai-agent.css  animations.css  base.css  batch.css  cards.css  charts.css  chat.css  command-bar.css  connection.css  coo-views.css  demo.css  equipment.css  footer.css  layout.css  line-oee.css  metrics.css  modals.css  plant-views.css  quality.css  responsive.css  scorecard.css  stream.css  variables.css
deploy/: docker-compose.yml
docs/: AGENTCORE_DEPLOYMENT.md  AGENT_ARCHITECTURE.md  ANOMALY_FILTER_FEATURE.md  ARCHITECTURE_FLOW.md  CMMS_INTEGRATION.md  EXECUTIVE_OVERVIEW.md  H1-implementation-notes.md  IMPLEMENTATION_SUMMARY.txt  README.md  SPARKPLUG_B_IMPLEMENTATION.md  SPARKPLUG_DATA_FLOW.md  TOPIC_CLASSIFIER_DEBUG.md  architecture-diagram.md  cmms-anomaly-filter.md  edgemind_architecture.html  edgemind_architecture.mmd  generate.sh  generate_architecture_diagram.py  phase5-ai-module-extraction.md  refactoring-phase2.md  refactoring-summary.md
infra/: .gitignore  README.md  app.py  cdk.context.json  deploy.sh  (+1 more)
(+213 files in other folders)
